@@ -7,14 +7,14 @@ http://jnrowe.github.com/cupage
 GPL-3
 A tool to check for updates on web pages
 amd64 x86
-distutils multilib python toolchain-funcs
+distutils eutils jnrowe-github multilib portability python toolchain-funcs
 doc minimal
 
 
 
 3
 
-compile install postinst postrm prepare test
+compile install postinst postrm prepare test unpack
 
 
 
