@@ -4,15 +4,15 @@ Hash: SHA1
 DIST cupage-0.5.5.tar.gz 38702 RMD160 b3116d52748e4b945cf48ee480f3156456a20dc5 SHA1 4d61112622463fd5ba4040a88075cfcc1f226bba SHA256 58e876412f532aef2ae587c62c4a5f0a0df320754e4a36336f5a055f7a4101ab
 DIST cupage-0.5.6.tar.gz 38611 RMD160 6c60a2ac796e2d06bf129530d2ca0e847a3ac1e5 SHA1 c8be17994d52c8bc64b5aed2e021d583e88805be SHA256 8621e426db0a84e15c25f68194ef2b52dc4cb8732ed158cbd661b4751a892c6b
 DIST sphinx-jnrowe-0.1.0.tar.gz 12528 RMD160 1dd31dc49fbcba44eef8f951d5c9c769c3942e1f SHA1 68fa896f6e572c435618fd2d6712c03ccb1225f2 SHA256 f02876c099996a772a8c9d9a2bfefaddddf8eb6ff24f764f0a04bab0c454eb31
-EBUILD cupage-0.5.5.ebuild 1141 RMD160 c7738b8438bebc18e11e9929357fb8d1d78b857a SHA1 433d0a689db70dfad467eae60db07fe5152634ee SHA256 872a7afce11f8412cf41a41b14155932b59fc90043cc9f66f66f14e966c8f1a3
-EBUILD cupage-0.5.6.ebuild 1392 RMD160 c28c9020dc0115be7c5b72beef5e60f38586efde SHA1 e3342226f354b1844ec39aee76d80c21dcca25bc SHA256 ac14cfb4d9735e9c264c87fc90bf2fb4e4b9e65270c27bff310566717c0d85ea
-MISC ChangeLog 4757 RMD160 66af17565b357f128334afe75dd571fc3704d5f6 SHA1 c2001e456e81552c1bc464b540392008d7115a0c SHA256 87be6f87312dbf0c2d8fbfd4c75e9f0ef41055659ccfbf17b7cc536b6ac06a2f
+EBUILD cupage-0.5.5.ebuild 1068 RMD160 cea0964c2a6dc5171a64eb849d36777057bac580 SHA1 9451fb65d960f9c63e380bbb70330818403246c6 SHA256 2cb28a34fa741e1faeedd5e51122e7439d22484e77d32d0c4c99a0bb4e823729
+EBUILD cupage-0.5.6.ebuild 1340 RMD160 23bde6cdf791a49af39253723741d541957c4b84 SHA1 e2dff8e4b878693d76f9f12d32cf68b6f8fd3785 SHA256 462cf5be08840bcdf66be5ee1845d1d20a4334c10e2112cc157e25fd273fa27c
+MISC ChangeLog 4883 RMD160 6cd8b90958272d5ee788239c0d92d6ac14fbdc90 SHA1 5408d7903a3a91e4237142475215841b9a5256f8 SHA256 f2d3c510dd66654cd191e186934c82d95daacc2942c81c4824e1e857faab68e9
 MISC metadata.xml 821 RMD160 12557063487e0e0d224e7ced43403d64d17bd8d2 SHA1 7abf40668022398ab5b2f17ae93d05720fc3aaa9 SHA256 67364238f64bd2a1a9e86722e06fe7842340bda0ec2592fb97367f6194d03b58
 MISC watch 28 RMD160 077ab1f79eca0c94ea2ce0180658eecdfdc75209 SHA1 feefe92427a000287454d84876769e4d1966d48d SHA256 a4eda7491fdb5be0331b7bf31b60296acb913baf04bf6c4532ffb58ad5929f12
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3cnAgACgkQzJrj3cAXR0mKmgCdGmULoiR+yUo4fFugiTm1IkBO
-Jd0An0bsPPfb2+p/eVAQV5jduYCg+ehS
-=hvOQ
+iEYEARECAAYFAk3lIh4ACgkQzJrj3cAXR0kZwQCfcp422iEvX0I21aTH3o30z1ab
+ErcAnRET9Ginsr+hv8AYmkbc6+knyPNl
+=eAnO
 -----END PGP SIGNATURE-----
