@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 May 2011; James Rowe <jnrowe@gmail.com> cupage-0.5.5.ebuild,
+  cupage-0.5.6.ebuild:
+  Switched to jnrowe-github eclass.
+
 *cupage-0.5.6 (25 May 2011)
 
   25 May 2011; James Rowe <jnrowe@gmail.com> +cupage-0.5.6.ebuild:
